--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/redux-form": "^8.2.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "react": "^16.13.0",
